<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".fragments.SearchFragment">

    <ImageView
        android:id="@+id/image_magic_logo"
        android:layout_alignParentTop="true"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/magic_the_gathering_logo_white"
        />

    <LinearLayout
        android:id="@+id/layout_search_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_below="@id/image_magic_logo"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_slight_dark"
            android:hint="@string/card_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_slight_dark"
            android:hint="@string/set_name">

            <AutoCompleteTextView
                android:id="@+id/autocomplete_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color"/>

            <Spinner
                android:id="@+id/spinner_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_type"/>

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_card_power"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:text="@string/card_power"/>

            <com.appyvet.materialrangebar.RangeBar
                android:id="@+id/range_bar_power"
                style="@style/RangeBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:mrb_tickEnd="@integer/toughness_max_value"
                app:mrb_tickStart="@integer/toughness_min_value"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_card_toughness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:text="@string/card_toughness"/>

            <com.appyvet.materialrangebar.RangeBar
                android:id="@+id/range_bar_toughness"
                style="@style/RangeBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:mrb_tickEnd="@integer/toughness_max_value"
                app:mrb_tickStart="@integer/toughness_min_value"
                />

        </LinearLayout>


    </LinearLayout>

    <cz.jirix.magiccardmanager.views.LoadingButton
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:text="@string/search"/>

</RelativeLayout>