<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/card_detail"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:context=".fragments.CardDetailFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_error_no_image_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/can_t_find_an_image_for_this_card"/>

        <ImageView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/card_detail_as_an_image"/>

    </FrameLayout>


</RelativeLayout>